<resources>
    <string name="app_name_dashqueue">Dash Queue</string>
    <string name="phone_no">Phone No.</string>
    <string name="hn_queue">HN/Queue</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember me</string>
    <string name="Loading">Loading</string>
    <string name="hospital">Hospital</string>
    <string name="Your_profile">Your profile</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="Queue">Queue</string>
    <string name="Logout">Logout</string>
    <string name="Waiting_count">จำนวนคนรอ %1$s คน</string>
    <string name="Your_queue_number_is">หมายเลขของท่านคือ</string>
    <string name="Last_updated_">Last updated : %1$s </string>
    <string name="Reject_Queue">Reject Queue</string>
    <string name="Are_you_sure_you_want_to_stop_receiving_notification">Are you sure you want to stop receiving notification?</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Profile">Profile</string>
    <string name="Queue_List">Queue List</string>
    <string name="Waiting_Queue">Wating Queue</string>
</resources>
