<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout_queue_detail_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.telecorp.dashqueue.custom.imageloader.ImageLoaderView
        android:id="@+id/imageloaderview_queue_detail_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_gradient_vertical_frombottom_black"
        app:ratioHeight="2"
        app:ratioWidth="5" />

    <TextView
        android:id="@+id/textview_queue_detail_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        tools:text="แผนก Medical Center" />

    <TextView
        android:id="@+id/textview_queue_detail_doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/blue_queue"
        android:textStyle="bold"
        tools:text="น.พ. สุขุม อารยะ" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/textview_queue_detail_wating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/blue_queue"
        tools:text="จำนวนรอ 3 คน" />

    <TextView
        android:id="@+id/textview_queue_detail_queue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/Your_queue_number_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/orange_queue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_queue_detail_queue_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="A001" />

    <TextView
        android:id="@+id/textview_queue_detail_last_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="@tools:sample/lorem/random" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_queue_detail_queue_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:minHeight="?attr/listPreferredItemHeight"
        android:text="@string/Queue_List"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_blue_queue" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_queue_detail_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:minHeight="?attr/listPreferredItemHeight"
        android:text="@string/Profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_blue_queue" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />
</LinearLayout>
